# email_scraper

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  readme.txt
configs/: config.yaml
