[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["lior <mail@liorbass.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.4.5"
confuse = "^2.0.0"
beautifulsoup4 = "^4.11.1"
validators = "^0.20.0"
aiohttp = "^3.8.1"
cymple = "^0.3.0"
neo4j = "^4.4.5"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
